# sirr

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.release  LICENSE  PENTEST.md  README.md  docker-compose.yml  llms.txt
.github/workflows/: ci.yml  release.yml
crates/sirr/: Cargo.toml
crates/sirr-server/: Cargo.toml
crates/sirr-server/src/: admin.rs  auth.rs  authz.rs  dirs.rs  handlers.rs  heartbeat.rs  lib.rs  license.rs  org_handlers.rs  server.rs  validator.rs  webhooks.rs
crates/sirr-server/src/store/: audit.rs  crypto.rs  db.rs  keys.rs  mod.rs  model.rs  org.rs  permissions.rs  visibility.rs  webhooks.rs
crates/sirr-server/tests/: authz_matrix.rs  end_to_end.rs  http_api.rs  http_multi_tenant.rs  multi_tenant.rs  pentest.rs  webhooks.rs
crates/sirr/src/: main.rs
crates/sirrd/: Cargo.toml
crates/sirrd/src/: main.rs
docs/plans/: 2026-02-23-patchable-secrets-design.md  2026-02-23-patchable-secrets-plan.md  2026-03-02-multi-tenant-clients-plan.md  2026-03-02-multi-tenant-design.md  2026-03-02-multi-tenant-plan.md
docs/superpowers/specs/: 2026-04-01-mcp-http-transport-design.md
scripts/: install.sh
snap/: snapcraft.yaml
tests/: e2e-cli.sh  e2e-docker.sh  e2e.sh
