[package]
name = "sirr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT"
repository.workspace = true
description = "CLI client for Sirr — push, get, and manage ephemeral secrets"
homepage.workspace = true
documentation.workspace = true
keywords = ["secrets", "vault", "ephemeral", "ttl", "self-hosted"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "sirr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dotenvy = "0.15"
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
humantime = "2"
clap_complete = "4"
clap_mangen = "0.2"
