[package]
name = "sirr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT"
repository.workspace = true
description = "CLI client for Sirr — push, get, and manage ephemeral secrets"
homepage.workspace = true
documentation.workspace = true
keywords = ["secrets", "vault", "ephemeral", "ttl", "self-hosted"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "sirr"
path = "src/main.rs"

[dependencies]
