[package]
name = "sirr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "MIT"
repository.workspace = true
description = "CLI client for Sirr — push, get, and manage ephemeral secrets"
homepage.workspace = true
documentation.workspace = true
keywords = ["secrets", "vault", "ephemeral", "ttl", "self-hosted"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "sirr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
