[package]
name = "sirrd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Sirrd — ephemeral secret vault server daemon"
homepage.workspace = true
documentation.workspace = true
keywords = ["secrets", "vault", "ephemeral", "server", "self-hosted"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "sirrd"
path = "src/main.rs"

[dependencies]
sirr-server.workspace = true
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
hex = "0.4"
