[package]
name = "sirrd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Sirrd — ephemeral secret vault server daemon"
homepage.workspace = true
documentation.workspace = true
keywords = ["secrets", "vault", "ephemeral", "server", "self-hosted"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "sirrd"
path = "src/main.rs"

[dependencies]
sirr-server.workspace = true
tokio = { workspace = true }
anyhow = { workspace = true }
